# Algorithmique-Distribuee

./: CMakeLists.txt  Exercice0.c  Exercice2  Exercice2.c  Exercice3.c  hellompi.c
Exercice_0/: Consigne
Exercice_5/: Exercice5  Exercice5.c
Exercice_6/: Exercice6  Exercice6.c
TD1/Exercice_1/: Consigne  hellompi  hellompi.c
TD1/Exercice_2/: Consigne
TD1/Exercice_3/: Exercice3.c
TD1/Exercice_4/: Consigne  Exercice4.c
TD1/Exercice_5/: Consigne
TD1/Exercice_6/: Consigne  Exercice6.c
TD1/Exercice_7/: Consigne  Exercice7b.c  Exercice7c.c
TD2/Exercice_1/: Consigne  Exercice1  Exercice1.c
TD2/Exercice_2/: Consigne  Exercice2  Exercice2.c
TD2/Exercice_3/: Consigne  Exercice3
TD2/Exercice_4/: Exercice4  Exercice4.c
TD3/Exercice_1/: Exercice1  Exercice1.c
TD3/Exercice_2/: Exercice2  Exercice2.c
TD4/Exercice_1/: Exercice1  Exercice1.c
TD4/Exercice_2/: Exercice2  Exercice2.c
